# services/rest/api/dist/swagger.json
@@ -125,6 +125,43 @@
 				]
 			}
 		},
+		"/bankless/driver/private/{driverId}": {
+			"get": {
+				"operationId": "DriverPrivate",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Bankless Endpoints"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "header",
+						"name": "Authorization",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
+						"name": "driverId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/bankless/terminal/private/{terminalName}": {
 			"get": {
 				"operationId": "TerminalPrivate",
@@ -165,6 +202,43 @@
 		"/bankless/driver/submit": {
 			"post": {
 				"operationId": "SubmitDriver",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Bankless Endpoints"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "header",
+						"name": "Authorization",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {}
+						}
+					}
+				}
+			}
+		},
+		"/bankless/driver/update": {
+			"post": {
+				"operationId": "UpdateDriver",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -424,7 +498,7 @@
 	},
 	"servers": [
 		{
-			"url": "https://coinmastersguild.com/api/v1"
+			"url": "http://127.0.0.1:9001/api/v1"
 		}
 	]
 }
